benefit-row: fix text alignment

--- a/src/BenefitRow.css
+++ b/src/BenefitRow.css
@@ -25,11 +25,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   margin: 0px auto;
 }
 
 @media (min-width: 750px) {
   .benefit-column {
     width: 30%;
+    text-align: left;
   }
 }
